fixed scrolling on mobile contact div

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -149,6 +149,9 @@ a {
         height: 20vw;
         width: 20vw;
     }
+    ::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .btn {
